# ZEV

./: .env.example  .env.mqtt.example  .gitattributes  .gitignore  .mcp.json  AutomatisierteTests.md  CLAUDE.md  README.MQTT.md  README.md  TASKS.md  dep-updates.txt  dependency-check-suppressions.xml  docker-compose-mqtt.yml  docker-compose.yml  gemini.md  pom.xml
.claude/: settings.local.json
Specs/: Anleitung-keycloak.md  AutomatisierteTests.md  Batteriespeicher.md  Berechtigungen.md  Bilanz-Messwerte-Upload.md  Bilanz-Messwerte-Upload_Umsetzungsplan.md  Bilanzmesspunkt.md  Bilanzmesspunkt_Umsetzungsplan.md  Bilanzmodell.md  Bilanzmodell_Umsetzungsplan.md  ClaudePräsentation.md  Composite-Roles.md  Composite-Roles_Umsetzungsplan.md  DarkMode.md  DarkMode_Umsetzungsplan.md  Datenbank-Ansicht.md  Datenbank-Ansicht_Umsetzungsplan.md  Debitorkontrolle.md  Debitorkontrolle_Umsetzungsplan.md  DeleteTranslations.md  EinheitenMitZeitspanne.md  Einstellung-Organisation-Merger.md  Einstellung-Organisation-Merger_Akzeptanzkriterien-Check.md  Einstellung-Organisation-Merger_Umsetzungsplan.md  Einstellungen.md  Icons.md  (+77 more)
pi-gateway/: .env.example  .gitignore  README.md  config.example.yaml  config.sim.example.yaml  pyproject.toml  requirements.txt
pi-gateway/deploy/: pi-gateway.service
pi-gateway/deploy/mosquitto/: Dockerfile  docker-entrypoint.sh  mosquitto.conf  passwd
pi-gateway/gateway/: __init__.py  config.py  heartbeat.py  main.py  models.py  publisher.py
pi-gateway/gateway/readers/: __init__.py  base.py  factory.py  gplug_reader.py  modbus_reader.py  sim_reader.py
(+563 files in other folders)
